# ppx_dotnet_bin_prot

./: README.md  ppx_dotnet_bin_prot.opam
deriver/: dune  ppx_dotnet_bin_prot_deriver.ml  ppx_dotnet_bin_prot_deriver.mli
doc/: README.mdx
expander/: dune  ppx_dotnet_bin_prot_expander.ml  ppx_dotnet_bin_prot_expander.mli
generator/lib/: dotnet_bin_prot_generator.ml  dotnet_bin_prot_generator.mli  dune
generator/test/: dotnet_bin_prot_generator_test.ml  dune  import.ml  manifest_equality.ml  with_built_in_override.ml
rewriter/: dune  ppx_dotnet_bin_prot_rewriter.ml
src/: dune
