(library (name ppx_dotnet_bin_prot) (kind ppx_rewriter)
 (libraries ppx_dotnet_bin_prot_deriver ppx_dotnet_bin_prot_rewriter)
 (preprocess no_preprocessing))

(rule (targets explicit_dependencies.ml explicit_dependencies.mli)
 (deps %{workspace_root}/bin/gen-explicit-dependencies.sh)
 (action
  (bash "%{deps} ppx_dotnet_bin_prot_deriver ppx_dotnet_bin_prot_rewriter")))